<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sanket.musicalstructure.ArtistActivity">

    <LinearLayout
        android:id="@+id/activity_artist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/Heading"
            android:text="@string/artists" />

        <TextView
            android:background="@color/artistTextViewBackground"
            style="@style/Description"
            android:text="@string/artist_activity_desc" />

        <Button
            android:background="@drawable/roundedbutton2"
            android:id="@+id/buttonHome1"
            style="@style/ButtonTheme"
            android:text="@string/home" />

        <Button
            android:background="@drawable/roundedbutton2"
            android:id="@+id/buttonComposer1"
            style="@style/ButtonTheme"
            android:text="@string/composers" />

        <Button
            android:background="@drawable/roundedbutton2"
            android:id="@+id/buttonControl1"
            style="@style/ButtonTheme"
            android:text="@string/control_navigation" />

        <Button
            android:background="@drawable/roundedbutton2"
            android:id="@+id/buttonAlbum1"
            style="@style/ButtonTheme"
            android:text="@string/albums" />

        <Button
            android:background="@drawable/roundedbutton2"
            android:id="@+id/buttonPlaylist1"
            style="@style/ButtonTheme"
            android:text="@string/playlists" />

        <Button
            android:background="@drawable/roundedbutton2"
            android:id="@+id/buttonRecentlyPlayed1"
            style="@style/ButtonTheme"
            android:text="@string/recently_played" />

        <Button
            android:background="@drawable/roundedbutton2"
            android:id="@+id/buttonGenre1"
            style="@style/ButtonTheme"
            android:text="@string/genres" />

    </LinearLayout>
</ScrollView>
