<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sanket.musicalstructure.ControlActivity">

    <LinearLayout
        android:id="@+id/activity_control"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/Heading"
            android:text="@string/control_activity" />

        <TextView
            android:background="@color/controlTextViewBackground"
            style="@style/Description"
            android:text="@string/control_activity_desc" />

        <Button
            android:background="@drawable/roundedbutton4"
            android:id="@+id/buttonHome3"
            style="@style/ButtonTheme"
            android:text="@string/home" />

        <Button
            android:background="@drawable/roundedbutton4"
            android:id="@+id/buttonArtist3"
            style="@style/ButtonTheme"
            android:text="@string/artists" />

        <Button
            android:background="@drawable/roundedbutton4"
            android:id="@+id/buttonComposer3"
            style="@style/ButtonTheme"
            android:text="@string/composers" />

        <Button
            android:background="@drawable/roundedbutton4"
            android:id="@+id/buttonAlbum3"
            style="@style/ButtonTheme"
            android:text="@string/albums" />

        <Button
            android:background="@drawable/roundedbutton4"
            android:id="@+id/buttonPlaylist3"
            style="@style/ButtonTheme"
            android:text="@string/playlists" />

        <Button
            android:background="@drawable/roundedbutton4"
            android:id="@+id/buttonRecentlyPlayed3"
            style="@style/ButtonTheme"
            android:text="@string/recently_played" />

        <Button
            android:background="@drawable/roundedbutton4"
            android:id="@+id/buttonGenre3"
            style="@style/ButtonTheme"
            android:text="@string/genres" />

    </LinearLayout>
</ScrollView>
