<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sanket.musicalstructure.AlbumActivity">

    <LinearLayout
        android:id="@+id/activity_album"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/Heading"
            android:text="@string/album_activity" />

        <TextView
            android:background="@color/albumTextViewBackground"
            style="@style/Description"
            android:text="@string/album_activity_desc" />

        <Button
            android:background="@drawable/roundedbutton5"
            android:id="@+id/buttonHome4"
            style="@style/ButtonTheme"
            android:text="@string/home"/>

        <Button
            android:background="@drawable/roundedbutton5"
            android:id="@+id/buttonArtist4"
            style="@style/ButtonTheme"
            android:text="@string/artists" />

        <Button
            android:background="@drawable/roundedbutton5"
            android:id="@+id/buttonComposer4"
            style="@style/ButtonTheme"
            android:text="@string/composers" />

        <Button
            android:background="@drawable/roundedbutton5"
            android:id="@+id/buttonControl4"
            style="@style/ButtonTheme"
            android:text="@string/control_navigation" />

        <Button
            android:background="@drawable/roundedbutton5"
            android:id="@+id/buttonPlaylist4"
            style="@style/ButtonTheme"
            android:text="@string/playlists" />

        <Button
            android:background="@drawable/roundedbutton5"
            android:id="@+id/buttonRecentlyPlayed4"
            style="@style/ButtonTheme"
            android:text="@string/recently_played" />

        <Button
            android:background="@drawable/roundedbutton5"
            android:id="@+id/buttonGenre4"
            style="@style/ButtonTheme"
            android:text="@string/genres" />

    </LinearLayout>
</ScrollView>